--- a/learncss2.html
+++ b/learncss2.html
@@ -14,7 +14,7 @@
                 border-bottom: 20px solid blue;
                 border-left: 20px solid yellow;
                 /* border-radius: 40px; */
-                background-color: powderblue;
+                background-color: #fff;
                 padding-top: 10px;
                 padding-right: 20px;
                 padding-bottom: 30px;
