--- a/learncss4.html
+++ b/learncss4.html
@@ -6,9 +6,30 @@
             a {
                 color: pink;
                 text-decoration: none;
-                border: 1px solid pink;
-                padding: 5px;
+                border: 1px solid deeppink;
+                padding: 10px 20px;
+                background-color: hotpink;
+                font-family: Arial, Helvetica, sans-serif;
+                border-radius: 10px;
             }
+            
+            a:link {
+                color: white;
+            }
+
+            a:visited {
+                color: white;
+            }
+
+            a:hover {
+                color: white;
+                background-color: deeppink;
+            }
+
+            a:active {
+                color: deeppink;
+            }
+
         </style>
     </head>
     <body>
