--- a/learncss4.html
+++ b/learncss4.html
@@ -83,7 +83,41 @@
             a.three:active {
                 color: darkblue;
             }
+
+            ul.web {
+                list-style-type: square;
+                list-style-position: inside;
+                background-color: pink;
+                border: 2px solid black;
+            }
             
+            ul li {
+                background-color: mintcream;
+            }
+
+            ul.nav {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                width: 150px;
+                background-color: #f1f1f1;
+            }
+
+            ul.nav li a {
+                display: block;
+                color: #000;
+                background-color: #f1f1f1;
+                border-radius: 0;
+                border: none;
+                padding: 8px 16px;
+                text-decoration: none;
+            }
+
+            /* Change the link to color on hover*/
+            ul.nav li a:hover {
+                background-color: #555;
+                color: white;
+            }
 
         </style>
     </head>
@@ -92,6 +126,21 @@
 
         <a class="one" href="https://google.com">Link to Google</a>
         <a class="two" href="https://fti.unai.edu">Link to FTI UNAI</a>
-        <a class="three" href="https://unai.edu">Link to UNAI Website</a>
+        <a class="three" href="https://unai.edu">Link to UNAI</a>
+
+        <p>My favorite foods: </p>
+        <ul class="web">
+            <li>Fried rice</li>
+            <li>Rendang</li>
+            <li>Fried noodles</li>
+        </ul>
+
+        <ul class="nav">
+            <li><a href="hello.html">Home</a></li>
+            <li><a href="https://fti.unai.edu">Link to FTI UNAI</a></li>
+            <li><a href="https://unai.edu">Link to UNAI</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+
     </body>
 </html>
