added footer layout

--- a/learncss6.html
+++ b/learncss6.html
@@ -9,10 +9,15 @@
             <h1>learn CSS part 6 // Header</h1>
         </div>
         <div id="sidebar">
-            Side Bar
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
         </div>
         <div id="main">
-            Main Content
+            <h2>Learning CSS Float</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ornare dapibus velit, et luctus metus egestas eu. Aliquam auctor, lectus id tincidunt efficitur, tortor justo commodo quam, mollis varius diam augue a libero. Phasellus a purus imperdiet, rhoncus purus eu, ultricies turpis. Nulla quam mi, pretium ac dui sit amet, tempor viverra massa. Duis dolor sapien, sodales et pharetra id, dignissim et massa. Proin elementum odio a urna dignissim, sed ultrices metus vehicula. Fusce dui nisl, efficitur in nisi in, euismod varius sem. Nulla facilisi. Curabitur condimentum vulputate auctor.</p>
         </div>
         <div id="footer">
             Footer
