--- a/learncss6b.html
+++ b/learncss6b.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>learn CSS part 6 // Header</h1>
+            <h1><img id="logo" src="images/logounai.png"></h1>
         </div>
         <div id="sidebar">
             <ul>
