--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img style="height: 40px;" src="images/logounai.png" alt="UNAI logo">
         <h1>Valerie's Website</h1>
     </header>
     <nav>
@@ -20,13 +21,29 @@
 
     </nav>
     <main>
-
+        <img src="images/cow.jpeg" alt="Cow Image">
+        <div id="container">
+            <div>
+                <h2>News Article 1</h2>
+                <img src="images/cow.jpeg" alt="Cow Image">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam semper metus elit, vitae viverra dui mollis vitae. Nullam volutpat elit sem, quis consequat orci placerat non. Vivamus vehicula sed purus vel varius. Quisque eget pulvinar libero. In hac habitasse platea dictumst. Donec gravida nibh quis urna aliquam condimentum. Vivamus fringilla mattis nibh, ac lacinia urna venenatis et. Nulla facilisi. Fusce non egestas lorem, a volutpat magna. Morbi ex lorem, efficitur at ante vel, dictum eleifend nisi. Nulla vehicula at nunc nec tempor. Ut varius suscipit felis vitae eleifend.
+            </div>
+            
+            <div>
+                <h2>News Article 2</h2>
+                <img src="images/cow.jpeg" alt="Cow Image">
+                Etiam auctor lectus purus, eu scelerisque est volutpat sit amet. Nunc auctor vulputate massa vel scelerisque. In sollicitudin lorem et tempus euismod. Nam sit amet fringilla mauris, sed dictum leo. Suspendisse ultrices tristique dui vitae hendrerit. Donec ut tortor id purus placerat congue non pulvinar purus. Proin ipsum justo, condimentum vitae eros id, dictum mattis eros. Integer finibus purus vitae lacinia iaculis. Aliquam maximus hendrerit tempus. Donec consequat, diam sed tempus laoreet, velit mauris cursus mi, ac dictum sem nisi tempus ex. Phasellus nulla lacus, fermentum vitae elit sit amet, rhoncus euismod leo. Suspendisse ac finibus tortor. In non scelerisque nunc. Sed maximus orci et venenatis volutpat.
+            </div>
+            
+            <div>
+                <h2>News Article 3</h2>
+                <img src="images/cow.jpeg" alt="Cow Image">
+                Nunc non interdum augue. Phasellus ac mollis risus. Nunc hendrerit auctor nulla, in sagittis leo condimentum eu. Suspendisse aliquet tempor ligula, eu fermentum libero. Donec ultricies tellus sit amet tortor cursus iaculis. Praesent ut neque eu augue lacinia molestie et quis dui. Aliquam at aliquet orci. Vivamus eget finibus dui. Pellentesque sit amet iaculis risus, ut efficitur ante. Sed mattis mi sit amet ex lobortis, iaculis pretium nisi placerat.
+            </div>
+        </div>
     </main>
-    <aside>
-
-    </aside>
     <footer>
-
+        Created by Valerie &copy; 2023
     </footer>
 </body>
 </html>
