--- a/index.html
+++ b/index.html
@@ -43,7 +43,37 @@
         </div>
     </main>
     <footer>
+        <div id="footercontainer">
+            <div>
+                <h3>Fakultas</h3>
+                <ul>
+                    <li>Fakultas Filsafat</li>
+                    <li>Fakultas Keguruan dan Ilmu Pendidikan</li>
+                    <li>Fakultas Ekonomi</li>
+                    <li>Fakultas Ilmu Keperawatan</li>
+                    <li>Fakultas Matematika dan Ilmu Pendidikan</li>
+                    <li>Fakultas Teknologi Informasi</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Akses Cepat</h3>
+                <ul>
+                    <li>Penerimaan Mahasiswa Baru</li>
+                    <li>Agenda Universitas</li>
+                    <li>Modul Mahasiswa</li>
+                    <li>Modul Dosen</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Universitas Advent Indonesia</h3>
+                <p>Jl. Kolonel Matsuri No.288, Kabupaten Bandung Barat, Jawa Barat, Indonesia 40559
+                </p>
+            </div>
+        </div>
+
+    <div id="copyright">
         Created by Valerie &copy; 2023
+    </div>
     </footer>
 </body>
 </html>
