--- a/learncss3.html
+++ b/learncss3.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Learn CSS part 3</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+        <script src="https://kit.fontawesome.com/78bdaffe4b.js" crossorigin="anonymous"></script>
         <style>
             div {
                 /* max-width: 1000px; */
@@ -16,17 +18,18 @@
                 width: 200px;
                 vertical-align: text-bottom;
             }
-
             p {
                 direction: rtl;
                 unicode-bidi: bidi-override;
                 text-transform: uppercase;
                 text-shadow: 2px 2px 5px red;
+                font-family: Pacifico;
             }
         </style>
     </head>
     <body>
         <div>
+            <i class="fas fa-cloud"></i>
             <p>This is a paragraph inside a div</p>
             <p>This is another paragraph inside a div</p>
         </div>
