--- a/learnjs1.html
+++ b/learnjs1.html
@@ -14,6 +14,18 @@
     <script>
         document.getElementById("ps").innerHTML = "JS is fun";
         document.getElementById("pm").innerHTML = "Today is Tuesday";
+
+        document.write("Today I'm learning JS <br>");
+        document.write("<br> I'm so excited learning JS");
+
+        window.alert("Welcome to my website");
+        window.alert("I'm happy to have you here!");
+
+        alert("Please don't go away!");
+        alert("I want to be with you!");
+
+        console.log("You can see me on console!");
+        console.log("Yes! Only on console.");
     </script>
 </body>
 </html>
