--- a/learnbootstrap1.html
+++ b/learnbootstrap1.html
@@ -10,8 +10,23 @@
     <title>Learn Bootstrap part 1</title>
 </head>
 <body>
-    <h1>Valerie's Website</h1>
-    <p>Welcome to my website</p>
-    
+    <div class="container-fluid">
+        <h1>Valerie's Website</h1>
+        <p>Welcome to my website</p>
+
+        <div class="row">
+            <div class="col-md-4">
+                First Column
+            </div>
+
+            <div class="col-md-4">
+                Second Column
+            </div>
+
+            <div class="col-md-4">
+                Third Column
+            </div>
+        </div>
+    </div>
 </body>
 </html>
